# document-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Modelfile  README.md  pyproject.toml  run_checks.py
data/: sample_technical_doc.md
docs/: pdf_to_markdown_evaluation.md  project_requirements_document.md  todo.md
src/: __init__.py  config.py  document_processor.py  embedding_manager.py  llm_generator.py  main.py  rag_pipeline.py  ragas_evaluator.py
tests/: __init__.py  conftest.py  test_config.py  test_document_processor.py  test_embedding_manager.py  test_llm_generator.py  test_main.py  test_rag_pipeline.py  test_ragas_evaluator.py  test_utils.py
